--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="SrcChess2.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="SrcChess for WPF" Height="700" Width="1000"
+        Title="Chess for WPF" Height="700" Width="1000"
         xmlns:my="clr-namespace:SrcChess2"
         Background="SkyBlue">
     <DockPanel>
