--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -34,6 +34,7 @@
                 <MenuItem Command="my:MainWindow.CancelPlayCommand" />
                 <Separator />
                 <MenuItem Name="mnuEditDesignMode" Command="my:MainWindow.DesignModeCommand" ToolTip="Design your own board." />
+                <MenuItem Name="mnuEditSetMetadata" Command="my:MainWindow.SetMetadataCommand" ToolTip="Set board metadata as castling" />
             </MenuItem>
             <MenuItem Header="_Options">
                 <MenuItem Name="mnuOptionFlashPiece" Command="my:MainWindow.FlashPieceCommand" IsCheckable="True" />
